Get single config from config_tag
